welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: not found: value &&
  if (weekday==false) && (vacation) {return true}
                      ^